@@ -871,6 +871,14 @@ class WC_Stripe_Webhook_Handler extends WC_Stripe_Payment_Gateway {
 
 				WC_Stripe_Logger::log( "Stripe PaymentIntent $intent->id succeeded for order $order_id" );
 
+				// TODO: This is a stop-gap to fix a critical issue, see
+				// https://github.com/woocommerce/woocommerce-gateway-stripe/issues/2536. It would
+				// be better if we removed the need for additional meta data in favor of refactoring
+				// this part of the payment processing.
+				if ( $order->get_meta( '_stripe_upe_waiting_for_redirect' ) ?? false ) {
+					return;
+				}
+
 				do_action( 'wc_gateway_stripe_process_payment', $charge, $order );
 
 				// Process valid response.
